# pyOSlg

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request.yml  python-package.yml
oslg/: oslg.py
src/oslg/: oslg.py
tests/: test_oslg.py
