[project]
name = "oslg"
version = "0.3.0"
description = "OpenStudio SDK logger for Python"
readme = "README.md"
requires-python = ">=3.2"
authors = [ {name = "Denis Bourgeois", email = "denis@rd2.ca"} ]
maintainers = [ {name = "Denis Bourgeois", email = "denis@rd2.ca"} ]
dependencies = []
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.2",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = ["openstudio", "logger"]

[project.urls]
"Homepage" = "https://github.com/rd2/pyOSlg"
"Bug Tracker" = "https://github.com/rd2/pyOSlg/issues"

[tool.uv]
package = true
